<resources>
    <string name="app_name">My Application</string>
    <string name="text_notification_title">বিকাশ বিপণন থেকে নতুন বার্তা</string>
    <string name="text_sign_in">প্রবেশ করুন</string>
    <string name="text_verify_phone_number_subtitle">"আপনার নাম্বারে পাঠানো %s ৬ - ডিজিটের কোডটি চাপুন"</string>
    <string name="text_resend_code">ওটিপি পাননি? আবার পাঠান</string>
    <string name="text_please_wait">দয়া করে অপেক্ষা করুন...</string>
    <string name="text_verify_code">কোড যাচাই করুন</string>
    <string name="settings">সেটিংস</string>
    <string name="text_provide_camera_permission">"ক্যামেরা অনুমতি প্রদান করুন"</string>
    <string name="text_provide_call_permission">"ককল করার অনুমতি প্রদান করুন"</string>
    <string name="text_provide_permission">প্রক্রিয়া চালু রাখার জন্য আনুমতি প্রদান করুন</string>
    <string name="text_getting_location">আপনার জিও লোকেশান সুনিশ্চিত করা হচ্ছে, দয়া করে অপেক্ষা করুন</string>
    <string name="text_ok">ঠিক আছে</string>
    <string name="invalid_credential">আপনার মোবাইল নাম্বারটি ঠিক নেই</string>
    <string name="text_provide_phone_state_permission">ফোন স্টেট অনুমতি প্রদান করুন</string>
    <string name="text_imei_not_matched">আপনার IMEI ঠিক নেই</string>
    <string name="text_required_imei_permission">"অনুমতি প্রদান করুন আপনার IMEI নাম্বার মেলানোর জন্য"</string>
    <string name="text_successfully_uploaded">আপলোড সফল হয়েছে</string>
    <string name="attendance_successfully_saved">উপস্থিতি সফলভাবে সংরক্ষিত হয়েছে</string>
    <string name="error_failed_attendance">উপস্থিতি সংরক্ষণ ব্যার্থ হয়েছে</string>
    <string name="drawer_item_competition_update">কম্পিটিশন আপডেট</string>
    <string name="drawer_item_add_inventory_count">ইনভেন্টরি যোগ করুন</string>
    <string name="drawer_item_apply_for_leave">ছুটির আবেদন</string>
    <string name="drawer_item_help">সাহায্য</string>
    <string name="drawer_item_section_divider">ভাষা পরিবর্তন</string>
    <string name="text_put_otp">ওটিপি দিন</string>
    <string name="text_direction_for_otp">দয়া করে কিছুক্ষণ অপেক্ষা করুন, আপনাকে স্বয়ংক্রিয়ভাবে প্রবেশ করানো হবে। যদি স্বয়ংক্রিয়ভাবে প্রবেশ করার আগেই ওটিপি পেয়ে থাকেন তাহলে তা দিন-</string>
    <string name="drawer_item_language_english">ইংরেজি</string>
    <string name="drawer_item_language_bangla">বাংলা</string>
    <string name="drawer_item_signout">সাইন আউট</string>
    <string name="upload_history_title">পুর্বের তথ্য</string>
    <string name="upload_history_count">দিনের সর্বমোট সংখ্যা</string>
    <string name="upload_history_count_num_valid">যাচাইয়ের সংখ্যা</string>
    <string name="upload_history_count_num_check">চেক-ইন-এর সংখ্যা</string>
    <string name="upload_history_count_num_total_outlets">সর্বমোট আউটলেট</string>
    <string name="upload_history_count_num_total_info_update">সর্বমোট তথ্য আপডেট</string>
    <string name="upload_history_count_num_total_competition">সর্বমোট কম্পিটিশন</string>
    <string name="text_history_outlet_">আউটলেট</string>
    <string name="text_history_competition_">কম্পিটিশন</string>
    <string name="text_history_outlet_info_update_">আউটলেটের তথ্য আপডেট</string>
    <string name="text_history_landmark_update_">ল্যান্ডমার্ক তথ্য আপডেট</string>
    <string name="upload_history_count_num_total_landmark">সর্বমোট ল্যান্ডমার্ক</string>
    <string name="competition_search_button_title">বিকাশ নাম্বার দিয়ে খুঁজুন</string>
    <string name="add_inventory_count_button_title">ইনভেন্টরি আপলোড করুন</string>
    <string name="enter_code_here">এখানে কোডটি চাপুন</string>
    <string name="verify_number_button">নাম্বার যাচাই করুন</string>
    <string name="internet_connection_message">"আপনার ইন্টারনেট সংযোগ চালু রাখুন রেজিস্ট্রেশন শেষ করার জন্য"</string>
    <string name="signup_instruction">"আপনার ফোন নাম্বারটি লিখুন সাইন আপ করার জন্য"</string>
    <string name="your_phone_number">আপনার ফোন নাম্বার</string>
    <string name="truned_on_your_internet_connection_to_sync_info">আপনার ইন্টারনেট সংযোগ চালু নেই সিঙ্ক করার জন্য</string>
    <string name="verify_your_phone">আপনার ফোন যাচাই করুন</string>
    <string name="btn_sync_info">সিঙ্ক করুন</string>
    <string name="welcome">স্বাগতম</string>
    <string name="homepage_instructions">অ্যাপ চালানোর আগে আপনার উপস্থিতি রেজিস্টার করুন</string>
    <string name="your_bkash_outlets">আপনার বিকাশ আউটলেট</string>
    <string name="outlets_waiting_for_upload">%d টি তথ্য পাঠানো বাকি</string>
    <string name="outlets_waiting_for_upload_info_update">%d আউটলেটের তথ্য আপডেট পাঠানো বাকি</string>
    <string name="landmark_waiting_for_upload">%d ল্যান্ডমার্ক তথ্য আপডেট পাঠানো বাকি</string>
    <string name="merchant_detail_contact_waiting_for_upload">%d মার্চেন্ট যোগাযোগের  তথ্য পাঠানো বাকি</string>
    <string name="outlets_waiting_for_upload_competition">%d আউটলেটের কম্পেটিশন আপডেট পাঠানো বাকি</string>
    <string name="outlets_waiting_for_upload_activity_title">তথ্য পাঠানো বাকি</string>
    <string name="please_keep_your_internet_connection_truned_on">আপনার ইন্টারনেট সংযোগ চালু রাখুন সিঙ্ক করার জন্য</string>
    <string name="tv_store_picture">বিকাশ ব্যানার সহ আউটলেটের ছবি তুলুন</string>
    <string name="tv_festoon_picture_for_regular_campaign_before">বিকাশ মার্চেন্ট পেমেন্ট স্টিকারের ছবি তুলুন</string>
    <string name="tv_festoon_picture_for_regular_campaign_after">বিকাশ মার্চেন্ট পেমেন্ট স্টিকারের ছবি</string>
    <string name="tv_festoon_picture_for_agent_outlets_before">দোকানের ভেতরের পোস্টার সহ পূর্ণাঙ্গ ছবি তুলুন</string>
    <string name="tv_festoon_picture_for_agent_outlets_after">দোকানের ভেতরের পোস্টার সহ পূর্ণাঙ্গ ছবি</string>
    <string name="tv_festoon_picture">বিকাশ Festoon সহ আউটলেটের ছবি তুলুন</string>
    <string name="tv_warning_please_take_competition_image">বআউটলেটে বিকাশ ছাড়া আর কী কী MFS একাউন্ট আছে ছবি তুলুন</string>
    <string name="tv_store_picture_success">ব্যানার সহ আউটলেটের ছবি</string>
    <string name="tv_store_picture_for_campaign_before">পুরো আউটলেটের ছবি তুলুন</string>
    <string name="tv_store_picture_for_campaign_after">পুরো আউটলেটের ছবি</string>
    <string name="tv_store_picture_for_agent_outlets_before">বাইরে থেকে (ব্যানার ও ফেস্টুন সহ) দোকানের পূর্ণাঙ্গ ছবি তুলুন</string>
    <string name="tv_store_picture_for_agent_outlets_after">বাইরে থেকে (ব্যানার ও ফেস্টুন সহ) দোকানের পূর্ণাঙ্গ ছবি</string>
    <string name="tv_camera_safety">ক্যামেরা ব্যবহারের সময় নিজেকে নিরাপদ রাখুন</string>
    <string name="tv_location_confirmation_yes">অবস্থান নিশ্চিতের তারিখ %s</string>
    <string name="tv_bmcc_code">বিকাশ মার্চেন্ট ক্যাটাগরি কোড</string>
    <string name="tv_other_info">অন্যান্য তথ্য</string>
    <string name="tv_edit">এডিট করুন</string>
    <string name="tv_name">পার্টনারের নাম</string>
    <string name="tv_address">পার্টনারের ঠিকানা</string>
    <string name="txt_partner_address">"ঠিকানা"</string>
    <string name="txt_partner_name">"নাম"</string>
    <string name="btn_yes">হ্যাঁ</string>
    <string name="btn_update_partner_info">পার্টনারের তথ্য আপডেট</string>
    <string name="btn_no">"না"</string>
    <string name="wrong_bmcc_code_entered">আপনি ভুল বিএমসিসি কোড দিয়েছেন</string>
    <string name="wrong_bmcc_code_preview">ভুল বিএমসিসি কোড</string>
    <string name="et_bmcc">বিএমসিসি: </string>
    <string name="et_bmcc_for_preview">(%s)</string>
    <string name="warning_check_all_task_to_continue">সবগুলো টাস্ক চেক করুন</string>
    <string name="tv_message_for_before_sync">আউটলেট দেখার জন্য আপনার আউটলেটের তথ্য সিঙ্ক করুন</string>
    <string name="fix_date_time">দয়া করে আপনার ফোনের তারিখ ও সময় ঠিক করুন</string>
    <string name="time_does_not_match">তারিখ ঠিক নেই</string>
    <string name="btn_ok_partner_info_dialog">আপডেট</string>
    <string name="btn_update_partner_info_cancel">বাতিল</string>
    <string name="tv_question_1_">আউটলেটের কেউ কি জানেন তাঁরা বিকাশে পেমেন্ট নিতে পারেন?</string>
    <string name="tv_question_2_">এই ওয়ালেটে কি বিকাশে পেমেন্ট করা যায়?</string>
    <string name="tv_newinfo">"নতুন তথ্য লিখুন"</string>
    <string name="tv_task_list">নতুন দেয়া হয়েছে</string>
    <string name="tv_task_list2">নতুন বসানো হয়েছে</string>
    <string name="btn_upload">আপলোড</string>
    <string name="btn_save_offline">অফলাইন সেভ</string>
    <string name="tv_checkin_confirmation">চেক-ইন নিশ্চিত করুন</string>
    <string name="tv_checkin_fragment_title">চেক-ইন করুন</string>
    <string name="check_in_confirmed_on">চেক-ইন নিশ্চিতের তারিখ %s</string>
    <string name="tv_competitors_picture">"কম্পেটিশনের ছবি তুলুন"</string>
    <string name="competition_take_picture_description">বর্ণনা লিখুন (অপশনাল)</string>
    <string name="title_helpline">হেল্পলাইন</string>
    <string name="upload_all_outlets">সব তথ্য আপলোড করুন</string>
    <string name="btn_take_selfie">\u0020 ছবি তুলুন</string>
    <string name="tv_register_your_attendance_with_selfie">"একটি ছবি তুলে আপনার উপস্থিতি রেজিস্টার করুন"</string>
    <string name="cb_task_1">Task list item 1</string>
    <string name="sign_up">সাইন আপ</string>
    <string name="didnt_get_the_code">Didn\'t get the code?</string>
    <string name="resend_code">RESEND CODE</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="number_prefix">+88</string>
    <string name="outlet_upload_dialog_header_title">আপনি কি নিশ্চিত? আপনি এই আউটলেটের তথ্য পাঠাতে চান?</string>
    <string name="merchant_detail_contact_upload_dialog_header_title">আপনি কি নিশ্চিত? এই মার্চেন্ট যোগাযোগের রিপোর্টটি পাঠাতে চান?</string>
    <string name="upload_history_date_format">%s, %s %d, %d</string>
    <string name="notification_history_date_format">%s, %s %d, %d</string>
    <string name="posm_report_date_format">\u0020 %s %d, %d</string>
    <string name="tv_select_outlet_type">পার্টনারের কি একের অধিক বিকাশ অ্যাকাউন্ট রয়েছে?</string>
    <string name="tv_outlet_type_agent">এজেন্ট</string>
    <string name="tv_outlet_type_merchant">মার্চেন্ট</string>
    <string name="tv_outlet_type_merchant_plus">মার্চেন্ট+</string>
    <string name="tv_outlet_type_sme">SME</string>
    <string name="tv_agent_bkash_no">নতুন খুঁজে পাওয়া এজেন্ট বিকাশ নাম্বার দিন</string>
    <string name="tv_merchant_number">নতুন খুঁজে পাওয়া মার্চেন্ট বিকাশ নাম্বার দিন</string>
    <string name="tv_merchant_plus_number">নতুন খুঁজে পাওয়া মার্চেন্ট+ বিকাশ নাম্বার দিন</string>
    <string name="tv_SME_number">নতুন খুঁজে পাওয়া SME বিকাশ নাম্বার দিন</string>
    <string name="text_merchant_plus_lite_new_number">নতুন খুঁজে পাওয়া মার্চেন্ট+ লাইট এ বিকাশ নাম্বার দিন</string>
    <string name="text_merchant_plus_lite_b_new_number">নতুন খুঁজে পাওয়া মার্চেন্ট+ লাইট বি বিকাশ নাম্বার দিন</string>
    <string name="tv_task_list_maitanance">রক্ষণাবেক্ষন</string>
    <string name="tv_transaction_id">১০ ডিজিটের ট্রাঞ্জেকশান আই ডি দিন</string>
    <string name="et_transaction_id">ট্রাঞ্জেকশান আই ডি</string>
    <string name="text_select_company">কম্পিটিশন নির্বাচন করুন</string>
    <string name="text_competition">কম্পেটিশন</string>
    <string name="empty_field">ফোন নাম্বারটি দিন!</string>
    <string name="text_add_inventory">ইনভেন্টরি যোগ করুন</string>
    <string name="withdraw">বাতিল করুন</string>
    <string name="apply_for_leave">ছুটির আবেদন</string>
    <string name="leave_status_date_range_format">%s - %s</string>
    <string name="toast_code_resent">পুনরায় কোড পাঠানো হয়েছে</string>
    <string name="toast_request_revalidate">চেক-ইন নিশ্চিত হয়নি, পুনরায় যাচাই করুন</string>
    <string name="toast_checkin_confirmation">চেক-ইন নিশ্চিত হয়েছে</string>
    <string name="text_tap_again">আবার ট্যাপ করুন!</string>
    <string name="text_login_with_password">পাসওয়ার্ড এর মাধ্যমে লগইন করুন</string>
    <string name="text_direction_for_password">নতুন একটি পাসওয়ার্ড নিয়ে আপনার সাথে অতি শীঘ্রই যোগাযোগ করা হবে।  পাসওয়ার্ডটি অবশ্যই শেয়ার করার ১০ মিনিটের মধ্যে ব্যাবহার করতে হবে। ১০ মিনিট পর পাসওয়ার্ডটি আর কাজ করবে না।</string>
</resources>