<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View"/>
        <variable
            name="codeModel"
            type="ai.retail.myapp.viewmodels.datamodels.CodeVerificationModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:scrollbars="vertical"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite">

            <ImageView
                android:id="@+id/iv_code_verification_background"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="72dp"
                android:src="@drawable/ic_otp"
                app:layout_constraintBottom_toTopOf="@+id/tv_verify_number_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0" />

            <TextView
                android:id="@+id/tv_verify_number_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="@{codeModel.is_password_mode_active? @string/text_login_with_password:@string/text_put_otp}"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/size_18sp"
                android:fontFamily="@font/notosansbengaliui_semibold"
                app:layout_constraintBottom_toTopOf="@+id/code_launch_progress_bar"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_code_verification_background" />


            <ProgressBar
                android:id="@+id/code_launch_progress_bar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="128dp"
                android:layout_height="8dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/custome_progress_bar_tint_style"
                android:progress="25"
                android:visibility="visible"
                app:layout_constraintBottom_toTopOf="@+id/tv_mobile_number"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_verify_number_title" />


            <TextView
                android:id="@+id/tv_mobile_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="@{codeModel.phoneNumber}"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/size_18sp"
                android:fontFamily="@font/notosansbengaliui_semibold"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/code_launch_progress_bar" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout_otp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:visibility="@{codeModel.is_password_mode_active?View.GONE:View.VISIBLE}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_mobile_number">


                <TextView
                    android:id="@+id/tv_verify_number_subtitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="16dp"
                    android:fontFamily="@font/notosansbengaliui_regular"
                    android:gravity="center"
                    android:text="@string/text_direction_for_otp"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/size_16sp"
                    app:layout_constraintBottom_toTopOf="@+id/tie_verification_code"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="parent" />

                <com.chaos.view.PinView
                    android:id="@+id/tie_verification_code"
                    style="@style/PinWidget.PinView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:cursorVisible="true"
                    android:inputType="number"
                    android:itemBackground="@drawable/pin_view_background"
                    android:paddingBottom="24dp"
                    android:text="@={codeModel.code}"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:cursorColor="@color/retaBaccent"
                    app:cursorWidth="2dp"
                    app:hideLineWhenFilled="false"
                    app:itemCount="6"
                    app:itemHeight="48dp"
                    app:itemRadius="4dp"
                    app:itemSpacing="@dimen/size_8sp"
                    app:itemWidth="48dp"
                    app:layout_constraintBottom_toTopOf="@+id/tv_resend_code"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_verify_number_subtitle"
                    app:lineColor="@color/white"
                    app:lineWidth="0dp"
                    app:viewType="rectangle" />

                <TextView
                    android:id="@+id/tv_resend_code"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:enabled="false"
                    android:fontFamily="@font/notosansbengaliui_medium"
                    android:gravity="center"
                    android:text="@string/text_resend_code"
                    android:textSize="@dimen/size_16sp"
                    app:layout_constraintBottom_toTopOf="@+id/tv_login_with_password"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tie_verification_code" />


                <TextView
                    android:id="@+id/tv_login_with_password"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="16dp"
                    android:background="@drawable/call_priority_view_background"
                    android:fontFamily="@font/notosansbengaliui_medium"
                    android:gravity="center"
                    android:paddingLeft="10dp"
                    android:paddingTop="5dp"
                    android:paddingRight="10dp"
                    android:paddingBottom="5dp"
                    android:visibility="gone"
                    android:text="@string/text_login_with_password"
                    android:textColor="@color/white"
                    android:textSize="@dimen/size_16sp"
                    app:layout_constraintBottom_toTopOf="@+id/btn_verify_code"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_resend_code" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_verify_code"
                    style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="16dp"
                    android:backgroundTint="@{codeModel.valid ? @color/retaBaccent : @color/btn_disabled}"
                    android:enabled="@{codeModel.valid}"
                    android:fontFamily="@font/notosansbengaliui_medium"
                    android:insetTop="0dp"
                    android:insetBottom="0dp"
                    android:text="@string/text_verify_code"
                    android:textColor="@color/white"
                    android:textSize="@dimen/size_16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_login_with_password" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_mobile_number">


                <TextView
                    android:id="@+id/tv_password_login_notes"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="16dp"
                    android:fontFamily="@font/notosansbengaliui_regular"
                    android:gravity="center"
                    android:text="@string/text_direction_for_password"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/size_16sp"
                    app:layout_constraintBottom_toTopOf="@+id/text_input_password"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_input_password"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="100dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="100dp"
                    android:layout_marginBottom="16dp"
                    android:hint="@string/enter_code_here"
                    app:layout_constraintBottom_toTopOf="@+id/btn_verify_password"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_password_login_notes">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_password"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/notosansbengaliui_regular"
                        android:inputType="phone"
                        android:maxLength="@integer/otp"
                        android:singleLine="true"
                        android:text="@={codeModel.password}"
                        android:textSize="@dimen/size_16sp" />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_verify_password"
                    style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="16dp"
                    android:backgroundTint="@{codeModel.passwordValid ? @color/retaBaccent : @color/btn_disabled}"
                    android:enabled="@{codeModel.passwordValid}"
                    android:fontFamily="@font/notosansbengaliui_medium"
                    android:insetTop="0dp"
                    android:insetBottom="0dp"
                    android:text="@string/text_ok"
                    android:textColor="@color/white"
                    android:textSize="@dimen/size_16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text_input_password" />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


</layout>